# discord-bridge

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.nix  Cargo.toml  README.md  build.rs  config-example.yaml  flake.nix  result  sqlx-data.json
.github/workflows/: audit.yaml  ci.yaml  pr.yaml  update-cargo-nix.yaml  update-flake.yaml
migrations/: 20220505055317_statestore.down.sql  20220505055317_statestore.up.sql  20220505064409_cryptostore.down.sql  20220505064409_cryptostore.up.sql  20220505153524_fix_initial_mistakes.down.sql  20220505153524_fix_initial_mistakes.up.sql  20220602060845_discord_tokens.down.sql  20220602060845_discord_tokens.up.sql
src/: app.rs  config.rs  main.rs  registration.rs
src/app/: client.rs
src/psql_store/: mod.rs
