[package]
name = "discord-matrix-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
rust-version = "1.60.0"
description = "Application Service that bridges Discord to Matrix"
readme = "README.md"
repository = "https://github.com/DarkKirb/discord-bridge"
license = "Apache-2.0"
keywords = ["matrix", "discord", "bridge"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
color-eyre = "0.6.1"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
sqlx = { version = "0.5.13", features = [
  "postgres",
  "runtime-tokio-rustls",
  "offline",
] }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = { version = "2.2.2", features = ["serde"] }

[dependencies.matrix-sdk-appservice]
git = "https://github.com/DarkKirb/matrix-rust-sdk"
branch = "eyre-support"
default-features = false
features = ["e2e-encryption", "eyre", "markdown", "rustls-tls"]

[dependencies.matrix-sdk]
git = "https://github.com/DarkKirb/matrix-rust-sdk"
branch = "eyre-support"
default-features = false
features = ["image-rayon"]

[dependencies.matrix-sdk-base]
git = "https://github.com/DarkKirb/matrix-rust-sdk"
branch = "eyre-support"
default-features = false
features = ["eyre"]

[patch.crates-io.anyhow]
git = "https://github.com/yaahc/eyre"
tag = "v0.6.8"
package = "eyre"
