[package]
name = "discord-matrix-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
rust-version = "1.60.0"
description = "Application Service that bridges Discord to Matrix"
readme = "README.md"
repository = "https://github.com/DarkKirb/discord-bridge"
license = "Apache-2.0"
keywords = ["matrix", "discord", "bridge"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
educe = "0.4.19"
futures = "0.3.21"
once_cell = "1.12.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
sqlx = { version = "0.5.13", features = [
  "postgres",
  "runtime-tokio-rustls",
  "offline",
] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = { version = "2.2.2", features = ["serde"] }

[dependencies.matrix-sdk-appservice]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["eyre", "markdown", "rustls-tls"]

[dependencies.matrix-sdk]
version = "0.5.0"
default-features = false
features = ["image-rayon"]

[dependencies.matrix-sdk-sql]
version = "0.1.0-beta.2"
default-features = false
features = ["postgres", "rustls", "e2e-encryption"]

[dependencies.sentry]
version = "0.26.0"
default-features = false
features = [
  "anyhow",
  "backtrace",
  "contexts",
  "panic",
  "test",
  "tracing",
  "debug-images",
  "log",
  "reqwest",
  "rustls",
]

[build-dependencies]
anyhow = "1.0.57"
vergen = "7.2.0"

[patch."https://github.com/matrix-org/matrix-rust-sdk"]
matrix-sdk = "0.5.0"
