[package]
name = "discord-matrix-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
rust-version = "1.60.0"
description = "Application Service that bridges Discord to Matrix"
readme = "README.md"
repository = "https://github.com/DarkKirb/discord-bridge"
license = "Apache-2.0"
keywords = ["matrix", "discord", "bridge"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
dashmap = "5.3.4"
dotenv = "0.15.0"
educe = "0.4.19"
once_cell = "1.12.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
signal-hook = "0.3.14"
sqlx = { version = "0.5.13", features = [
  "postgres",
  "runtime-tokio-rustls",
  "offline",
] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
twilight-model = { git = "https://github.com/terminal-discord/twilight" }
url = { version = "2.2.2", features = ["serde"] }

[dependencies.matrix-sdk-appservice]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["eyre", "markdown", "rustls-tls", "e2e-encryption"]

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["image-rayon", "e2e-encryption"]

[dependencies.matrix-sdk-sql]
git = "https://github.com/DarkKirb/matrix-sdk-statestore-sql"
default-features = false
features = ["postgres", "rustls", "e2e-encryption"]

[dependencies.sentry]
version = "0.26.0"
default-features = false
features = [
  "anyhow",
  "backtrace",
  "contexts",
  "panic",
  "test",
  "tracing",
  "debug-images",
  "log",
  "reqwest",
  "rustls",
]

[build-dependencies]
anyhow = "1.0.57"
vergen = "7.2.0"

[patch.crates-io]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-base = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-crypto = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-store-encryption = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
vodozemac = { git = "https://github.com/matrix-org/vodozemac", rev = "d0e744287a14319c2a9148fef3747548c740fc36" }
